fix to welcome page font on mobile

--- a/app/output.css
+++ b/app/output.css
@@ -6629,6 +6629,10 @@ video {
     padding: 0.5rem;
   }
 
+  .md\:p-1 {
+    padding: 0.25rem;
+  }
+
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
